--- a/JoelleBoatwright_Form.html
+++ b/JoelleBoatwright_Form.html
@@ -13,6 +13,9 @@
     .container {
         margin-top: 30px;
     }
+    .button {
+        margin-top: 10px;
+    }
 
 </style>
 
@@ -21,32 +24,59 @@
 
         <form action="http://www.aptweblab.org/request" method="post">
 
-            <div class="form-group">
-                <label for="usr">Name:</label>
-                <input type="text" class="form-control" id="usr">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="usr">Name:</label>
+                            <input type="text" class="form-control" id="usr">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="mail">E-mail:</label>
+                            <input type="email" class="form-control" id="eml">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                <label for="mail">E-mail:</label>
-                <input type="email" class="form-control" id="eml">
+                <label for="comment">How awesome do you think this class is?</label>
+                <textarea class="form-control" id="comment"></textarea>
             </div>
 
-            <label for="radio">Grade Level:</label>
-            <div class="radio">
-                <label><input type="radio" name="radio">Freshman</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="radio">Sophomore</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="radio">Junior</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="radio">Senior</label>
-            </div>
-
-            <div class="form-group">
-                <label for="flavors">Favorite Ice Cream Flavors:</label>
-                <select class="form-control" id="flavors">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label for="radio">Grade Level:</label>
+                        <div class="radio">
+                            <label><input type="radio" name="radio">Freshman</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="radio">Sophomore</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="radio">Junior</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="radio">Senior</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label for="check">Cats, Dogs, or Both?</label>
+                            <div class="checkbox">
+                                <label><input type="checkbox" name="check">Cats</label>
+                            </div>
+                            <div class="checkbox">
+                                <label><input type="checkbox" name="check">Dogs</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="flavors">Favorite Ice Cream Flavors:</label>
+                            <select class="form-control" id="flavors">
                     <option selected disabled>Please select a flavor</option>
                     <option>Vanilla</option>
                     <option>Chocolate</option>
@@ -54,6 +84,13 @@
                     <option>Coffee</option>
                     <option>Other</option>
                 </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="button">
+                <button type="submit">Submit!</button>
             </div>
 
         </form>
